# mx-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install.sh  scripts.sh
.github/workflows/: build.yml  integration-test.yml  unit-test.yml
cli/: CMakeLists.txt  cli_handler.cpp  cli_handler.h  cli_utility.cpp  cli_utility.h  commandhandler.h  main.cpp  secretkeyprovider.cpp  secretkeyprovider.h
cli/config/: cliconfig.cpp  cliconfig.h  config.toml  networkconfig.cpp  networkconfig.h
cli/inputhandler/: CMakeLists.txt  arghandler.cpp  arghandler.h  ext.h  ifilehandler.cpp  ifilehandler.h  jsonfile.cpp  jsonfile.h  jsonhandler.cpp  jsonhandler.h  options.cpp  options.h  options_esdt.cpp  options_esdt.h  pemhandler.cpp  pemhandler.h  transactionhandler.cpp  transactionhandler.h
cli/inputhandler/wrappers/: iwrapper.h  jsonhandler_input_wrapper.h  pem_input_wrapper.h  pemhandler_input_wrapper.h  transaction_input_wrapper.cpp  transaction_input_wrapper.h
examples/: examples.md
include/: erdsdk.h  mxsdk.h
include/account/: account.h  address.h
include/filehandler/: ifile.h  ifilehandler.h  isecretkey.h  keyfilereader.h  pemhandler.h  pemreader.h
include/internal/: biguint.h  internal.h
include/provider/: proxyprovider.h
include/provider/data/: data_transaction.h  ext.h  networkconfig.h
include/proxy/: proxyprovider.h
include/proxy/data/: data_transaction.h  ext.h
include/smartcontracts/: contract_call.h  sc_arguments.h  scarguments.h
include/transaction/: esdt.h  gas_estimator.h  itransaction_builder.h  messagesigner.h  payload_builder.h  signer.h  token_payment.h  transaction.h  transaction_builder_esdt.h  transaction_builder_input.h  transaction_builders.h  transaction_factory.h
scripts/: helper-tests.sh  integration-tests.sh  local-testnet.sh  scripts.sh  test-with-proxy.sh  unit-tests.sh  update-testnet-variables.sh
src/: CMakeLists.txt  main.cpp
src/InputHandler/: CMakeLists.txt  account.cpp  address.cpp  address.h  ext.h  internal.h  signer.cpp  signer.h  transaction.cpp  transaction.h
src/InputHandler/ArgHandler/: arghandler.cpp  arghandler.h
src/InputHandler/IFileHandler/: ifilehandler.cpp  ifilehandler.h
src/InputHandler/InputWrappers/: iwrapper.h  jsonhandler_input_wrapper.h  pemhandler_input_wrapper.h
src/InputHandler/JsonHandler/: jsonhandler.cpp  jsonhandler.h
src/InputHandler/PemHandler/: pemhandler.cpp  pemhandler.h
src/Utils/: CMakeLists.txt  base64.h  bech32.cpp  bech32.h  bites.cpp  bites.h  ext.h  hex.cpp  hex.h  strchr.h
src/account/: account.cpp  address.cpp
src/filehandler/: ifile.cpp  ifilehandler.cpp  keyfilereader.cpp  pemhandler.cpp  pemreader.cpp
src/internal/: biguint.cpp
src/provider/: apiresponse.h  proxyprovider.cpp
src/provider/data/: data_transaction.cpp  networkconfig.cpp
src/proxy/: apiresponse.h  proxyprovider.cpp
src/proxy/data/: data_transaction.cpp
src/smartcontracts/: contract_call.cpp  sc_arguments.cpp  scarguments.cpp
src/transaction/: esdt.cpp  gas_estimator.cpp  itransaction_builder.cpp  messagesigner.cpp  payload_builder.cpp  payload_builder.h  scarguments.cpp  signer.cpp  token_payment.cpp  transaction.cpp  transaction_builder_esdt.cpp  transaction_builder_input.cpp  transaction_builders.cpp  transaction_factory.cpp
src/utils/: CMakeLists.txt  base64.cpp  base64.h  bits.cpp  bits.h  cfg.h  common.h  errors.h  ext.h  hex.cpp  hex.h  params.h  strchr.h
src/wrappers/: cryptosignwrapper.cpp  cryptosignwrapper.h  httpwrapper.cpp  httpwrapper.h  jsonwrapper.cpp  jsonwrapper.h
tests/: CMakeLists.txt
tests/testData/: aliceKeyFile.json  bobKeyFile.json  carolKeyFile.json  keyFile.json  keyFileInvalidCipher.json  keyFileInvalidContent.json  keyFileInvalidKdf.json  keyFileInvalidMac.json  keyFileInvalidVersion.json  keys.pem  keysNotEnoughBytes.pem  keysValid1.pem
tests/test_cli/: CMakeLists.txt
tests/test_cli/testData/: keysEmptyFile.pem  outputJson.json
tests/test_cli/test_inputhandler/: CMakeLists.txt  test_inputhandler.cpp
tests/test_common/: test_common.h
tests/test_inputhandler/: CMakeLists.txt  test_inputhandler.cpp
tests/test_integration/: CMakeLists.txt
tests/test_integration/test_proxyprovider/: CMakeLists.txt  test_proxyprovider.cpp
tests/test_integration/test_wrappers/: CMakeLists.txt  test_wrapper_client.cpp
tests/test_src/: CMakeLists.txt
tests/test_src/test_account/: CMakeLists.txt  test_account.cpp
tests/test_src/test_filehandler/: CMakeLists.txt  test_filehandler.cpp
tests/test_src/test_internal/: CMakeLists.txt  test_internal.cpp
tests/test_src/test_provider/: CMakeLists.txt  test_apiresponse.cpp  test_data_transaction.cpp  test_proxyprovider.cpp
tests/test_src/test_proxyprovider/: CMakeLists.txt  test_proxyprovider.cpp
tests/test_src/test_smart_contracts/: CMakeLists.txt  test_smart_contracts.cpp
tests/test_src/test_transaction/: CMakeLists.txt  test_esdt.cpp  test_gas_estimator.cpp  test_message_signer.cpp  test_payload_builder.cpp  test_signer.cpp  test_token_payment.cpp  test_transaction.cpp  test_transaction_factory.cpp
tests/test_src/test_utils/: CMakeLists.txt  test_utils.cpp
tests/test_src/test_wrappers/: CMakeLists.txt  test_wrappers.cpp
tests/test_utils/: CMakeLists.txt  test_utils.cpp
