include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/tests/test_common)

add_executable(test_transaction test_transaction.cpp)
add_executable(test_signer test_signer.cpp)
add_executable(test_gas_estimator test_gas_estimator.cpp)
add_executable(test_token_payment test_token_payment.cpp)
add_executable(test_payload_builder test_payload_builder.cpp)
add_executable(test_transaction_factory test_transaction_factory.cpp)
add_executable(test_message_signer test_message_signer.cpp)
add_executable(test_esdt test_esdt.cpp)

target_link_libraries(test_transaction PUBLIC gtest_main)
target_link_libraries(test_signer PUBLIC gtest_main)
target_link_libraries(test_gas_estimator PUBLIC gtest_main)
target_link_libraries(test_token_payment PUBLIC gtest_main)
target_link_libraries(test_payload_builder PUBLIC gtest_main)
target_link_libraries(test_transaction_factory PUBLIC gtest_main)
target_link_libraries(test_message_signer PUBLIC gtest_main)
target_link_libraries(test_esdt PUBLIC gtest_main)

target_link_libraries(test_transaction PUBLIC src)
target_link_libraries(test_signer PUBLIC src)
target_link_libraries(test_gas_estimator PUBLIC src)
target_link_libraries(test_token_payment PUBLIC src)
target_link_libraries(test_payload_builder PUBLIC src)
target_link_libraries(test_transaction_factory PUBLIC src)
target_link_libraries(test_message_signer PUBLIC src)
target_link_libraries(test_esdt PUBLIC src)

add_test(NAME test_transaction COMMAND test_transaction)
add_test(NAME test_signer COMMAND test_signer)
add_test(NAME test_gas_estimator COMMAND test_gas_estimator)
add_test(NAME test_token_payment COMMAND test_token_payment)
add_test(NAME test_payload_builder COMMAND test_payload_builder)
add_test(NAME test_transaction_factory COMMAND test_transaction_factory)
add_test(NAME test_message_signer COMMAND test_message_signer)
add_test(NAME test_esdt COMMAND test_esdt)
